@@ -8,7 +8,7 @@ $mod_info['released']   = $cs_main['version_date'];
 $mod_info['creator']    = 'CKSource';
 $mod_info['team']       = 'CKSource';
 $mod_info['url']        = 'www.ckeditor.com';
-$mod_info['text']       = 'Version 3.6.6';
+$mod_info['text']       = 'Version 3.6.6 with FCKEditor Filebrowser 2.6.9';
 $mod_info['icon']       = 'ckeditor';
 $mod_info['show']       = array('abcode/rte_html' => 5, 'abcode/rte_more' => 5, 'options/roots' => 5);
 $mod_info['categories'] = FALSE;
